--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "mercadodev.rodrigo3d.com",
-  "version": "1.0.0",
-  "private": false,
-  "homepage": "https://rodrigo3d.github.io/MercadoDev",
+  "name": "react-app-starter",
+  "author": "Rodrigo Ribeiro <me@rodrigo3d.com>",
+  "description": "Create React App | Boilerplate",
+  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "re-base": "^3.2.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "push": "git add . && git commit -m \"[Atualização Automática]\" && git push -u origin final"
   },
-  "devDependencies": {
-    "gh-pages": "^1.1.0"
-  }
+  "devDependencies": {}
 }
