--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mercadodev.rodrigo3d.com",
   "version": "1.0.0",
   "private": false,
-  "homepage": "https://rodrigo3d.github.io/MercadoDev",
   "dependencies": {
     "re-base": "^3.2.0",
     "react": "^16.1.0",
@@ -14,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "push": "git add . && git commit -m \"[Atualização Automática]\" && git push -u origin v2"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
