--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mercado-dev",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://mercado-dev.rodrigo3d.com/",
   "dependencies": {
     "re-base": "^3.2.2",
     "react": "^16.3.2",
@@ -14,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "push": "git add . && git commit -m \"[Atualização Automática]\" && git push -u origin v3"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
