--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,8 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
+end_of_line = crlf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.min.*]
-indent_style = ignore
-trim_trailing_whitespace = false
-insert_final_newline = false
