--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build-env": "react-app-env --env-file=.env.prod build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "push": "git add . && git commit -m \"[Atualização Automática]\" && git push -u origin master"
+    "push": "git add . && git commit -m \"[Atualização Automática]\" && git push --force origin master"
   },
   "devDependencies": {
     "react-app-env": "^1.2.0"
